[package]
name = "parser"
version = "0.1.0"
authors = ["Paul Maddox <pmaddox@amazon.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "5.0"
flate2 = "1.0"
hex = "0.3.2"
chrono = "0.4"

[lib]
name = "libhsbc"
path = "src/lib.rs"

[[bin]]
name = "hsbc"
path = "src/main.rs"