[package]
name = "parser"
version = "0.1.0"
authors = ["Paul Maddox <pmaddox@amazon.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "5.0"
flate2 = "1.0"
chrono = "0.4"
rust_decimal = "1.0"
rust-crypto = "0.2.36"
docopt = "1.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[lib]
name = "libhsbc"
path = "src/lib.rs"

[[bin]]
name = "hsbc"
path = "src/main.rs"
